> Began implementation of territorial setup.